complete on duty process
